--- a/index.html
+++ b/index.html
@@ -12,74 +12,318 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-
-    <body>
-      <section id="header">
-        <a href="#" class="logo"><img src="images/logo.png" alt="" /></a>
-
-        <nav class="nav">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Menu</a>
-          <a href="#">Products</a>
-          <a href="#">Review</a>
-          <a href="#">Contact</a>
-          <a href="#">Blogs</a>
-        </nav>
-
-        <div class="icons">
-          <i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
-          <i class="fa-solid fa-cart-shopping" id="cart-btn"></i>
-          <i class="fa-solid fa-bars" id="menu-btn"></i>
-        </div>
-
-        <div class="search-form">
-          <input type="search" id="search-box" placeholder="Search" />
-          <label for="search-box" class="fa-solid fa-magnifying-glass"></label>
-        </div>
-
-        <div class="cart-items-cont">
-          <div class="cart-item">
-            <span><i id="delete" class="fa-solid fa-xmark"></i></span>
-            <img src="images/cart-item-1.png" alt="" />
-            <div class="content">
-              <h3>cart item 01</h3>
-              <div class="price">$15.99</div>
-            </div>
-          </div>
-
-          <div class="cart-item">
-            <span><i id="delete" class="fa-solid fa-xmark"></i></span>
-            <img src="images/cart-item-2.png" alt="" />
-            <div class="content">
-              <h3>cart item 01</h3>
-              <div class="price">$15.99</div>
-            </div>
-          </div>
-
-          <div class="cart-item">
-            <span><i id="delete" class="fa-solid fa-xmark"></i></span>
-            <img src="images/cart-item-3.png" alt="" />
-            <div class="content">
-              <h3>cart item 01</h3>
-              <div class="price">$15.99</div>
-            </div>
-          </div>
-
-          <div class="cart-item">
-            <span><i id="delete" class="fa-solid fa-xmark"></i></span>
-            <img src="images/cart-item-4.png" alt="" />
-            <div class="content">
-              <h3>cart item 01</h3>
-              <div class="price">$15.99</div>
-            </div>
-          </div>
-
-          <a href="#" id="btn">checkout now</a>
-        </div>
-      </section>
-
-      <script src="script.js"></script>
-    </body>
   </head>
+  <body>
+    <section id="header">
+      <a href="#" class="logo"><img src="images/logo.png" alt="" /></a>
+
+      <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#products">Products</a>
+        <a href="#review">Review</a>
+        <a href="#contact">Contact</a>
+        <a href="#blogs">Blogs</a>
+      </nav>
+
+      <div class="icons">
+        <i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
+        <i class="fa-solid fa-cart-shopping" id="cart-btn"></i>
+        <i class="fa-solid fa-bars" id="menu-btn"></i>
+      </div>
+
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="Search" />
+        <label for="search-box" class="fa-solid fa-magnifying-glass"></label>
+      </div>
+
+      <div class="cart-items-cont">
+        <div class="cart-item">
+          <span><i id="delete" class="fa-solid fa-xmark"></i></span>
+          <img src="images/cart-item-1.png" alt="" />
+          <div class="content">
+            <h3>cart item 01</h3>
+            <div class="price">$15.99</div>
+          </div>
+        </div>
+
+        <div class="cart-item">
+          <span><i id="delete" class="fa-solid fa-xmark"></i></span>
+          <img src="images/cart-item-2.png" alt="" />
+          <div class="content">
+            <h3>cart item 01</h3>
+            <div class="price">$15.99</div>
+          </div>
+        </div>
+
+        <div class="cart-item">
+          <span><i id="delete" class="fa-solid fa-xmark"></i></span>
+          <img src="images/cart-item-3.png" alt="" />
+          <div class="content">
+            <h3>cart item 01</h3>
+            <div class="price">$15.99</div>
+          </div>
+        </div>
+
+        <div class="cart-item">
+          <span><i id="delete" class="fa-solid fa-xmark"></i></span>
+          <img src="images/cart-item-4.png" alt="" />
+          <div class="content">
+            <h3>cart item 01</h3>
+            <div class="price">$15.99</div>
+          </div>
+        </div>
+
+        <a href="#" id="btn">checkout now</a>
+      </div>
+    </section>
+
+    <section id="home" class="section">
+      <div class="content">
+        <h3>Fresh Coffee in the Morning</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+          a culpa maiores modi praesentium suscipit, pariatur, fuga provident
+          eveniet maxime.
+        </p>
+        <a href="#" id="btn">Get Yours Now</a>
+      </div>
+    </section>
+
+    <section id="about" class="about">
+      <h1 class="heading"><span>about</span> us</h1>
+      <div class="row">
+        <div class="image">
+          <img src="images/about-img.jpeg" alt="" />
+        </div>
+        <div class="content">
+          <h3>what makes our coffee so special?</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Consectetur delectus iure exercitationem at nihil incidunt. Veniam
+            ipsum corrupti labore maxime quisquam voluptas similique esse
+            ratione officia! Quidem modi laborum commodi!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+            consectetur doloribus in nemo dolorum illo ipsa ipsum nihil iure
+            placeat fuga.
+          </p>
+          <a href="#" id="btn">learn more</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="menu">
+      <h1 class="heading">our<span> menu</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/menu-1.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="images/menu-2.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="images/menu-3.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="images/menu-4.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="images/menu-5.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+          <img src="images/menu-6.png" alt="" />
+          <h3>tasty and healthy</h3>
+          <div class="price">$15.99 <span>$20.99</span></div>
+          <a href="#" id="btn">add to cart</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="products">
+      <h1 class="heading">our<span> products</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="icons">
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i class="fa-solid fa-heart"></i></a>
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+          </div>
+
+          <div class="image">
+            <img src="images/product-1.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h3>nicaragua robusta</h3>
+            <div class="stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <div class="price">$20.99 <span>$25.99</span></div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="icons">
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i class="fa-solid fa-heart"></i></a>
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+          </div>
+
+          <div class="image">
+            <img src="images/product-2.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h3>columbia organic</h3>
+            <div class="stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <div class="price">$25.99 <span>$30.99</span></div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="icons">
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i class="fa-solid fa-heart"></i></a>
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+          </div>
+
+          <div class="image">
+            <img src="images/product-3.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h3>peru whole bean</h3>
+            <div class="stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <div class="price">$35.99 <span>$40.99</span></div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="icons">
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i class="fa-solid fa-heart"></i></a>
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+          </div>
+
+          <div class="image">
+            <img src="images/product-4.png" alt="" />
+          </div>
+
+          <div class="content">
+            <h3>ethiopia organic mix</h3>
+            <div class="stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <div class="price">$25.99 <span>$30.99</span></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="review">
+      <h1 class="heading">customers'<span> reviews</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img class="quote" src="images/quote-img.png" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+            ab laboriosam deleniti exercitationem voluptatum! Repellendus
+            numquam ab quo corrupti debitis, laudantium dicta amet libero
+            eveniet culpa quidem accusamus, assumenda at.
+          </p>
+          <img class="user" src="images/pic-1.png" alt="" />
+          <h3>Liam Mills</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="quote" src="images/quote-img.png" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+            ab laboriosam deleniti exercitationem voluptatum! Repellendus
+            numquam ab quo corrupti debitis, laudantium dicta amet libero
+            eveniet culpa quidem accusamus, assumenda at.
+          </p>
+          <img class="user" src="images/pic-2.png" alt="" />
+          <h3>Liam Mills</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="quote" src="images/quote-img.png" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+            ab laboriosam deleniti exercitationem voluptatum! Repellendus
+            numquam ab quo corrupti debitis, laudantium dicta amet libero
+            eveniet culpa quidem accusamus, assumenda at.
+          </p>
+          <img class="user" src="images/pic-3.png" alt="" />
+          <h3>Liam Mills</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
