Revert "Third Commit"
This reverts commit 6c84858359d29cd0935494e396d511793aac24e2.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
         <a href="#products">Products</a>
-        <a href="#reviews">Reviews</a>
+        <a href="#review">Review</a>
         <a href="#contact">Contact</a>
         <a href="#blogs">Blogs</a>
       </nav>
@@ -263,7 +263,7 @@
       </div>
     </section>
 
-    <section id="reviews">
+    <section id="review">
       <h1 class="heading">customers'<span> reviews</span></h1>
       <div class="box-container">
         <div class="box">
@@ -324,122 +324,6 @@
         </div>
       </div>
     </section>
-
-    <section id="contact">
-      <h1 class="heading"><span>contact</span> us</h1>
-      <div class="row">
-        <iframe
-          class="map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.808435334313!2d36.78741541423293!3d-1.2891581359916382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11210c3bed09%3A0x734a0886685fc9ee!2sCoffee%20%26%20Bagels!5e0!3m2!1sen!2ske!4v1666620050144!5m2!1sen!2ske"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-
-        <form action="">
-          <h3>get in touch</h3>
-          <div class="inputBox">
-            <i class="fa-solid fa-user"></i>
-            <input type="text" placeholder="Name" />
-          </div>
-
-          <div class="inputBox">
-            <i class="fa-solid fa-envelope"></i>
-            <input type="email" placeholder="Email" />
-          </div>
-
-          <div class="inputBox">
-            <i class="fa-solid fa-phone"></i>
-            <input type="number" placeholder="Number" />
-          </div>
-
-          <input type="submit" value="contact now" id="btn" />
-        </form>
-      </div>
-    </section>
-
-    <section id="blogs">
-      <h1 class="heading"><span>our</span> blogs</h1>
-      <div class="box-container">
-        <div class="box">
-          <div class="image">
-            <img src="images/blog-1.jpeg" alt="" />
-          </div>
-
-          <div class="content">
-            <a href="#" class="title">Dear Coffee, I Love You</a>
-            <span>by admin / 4th, May 2021</span>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Similique, veniam! Aspernatur atque repellendus esse itaque. Ab
-              error perferendis omnis repudiandae qui amet culpa quis voluptatem
-              nesciunt...
-            </p>
-            <a href="#" id="btn">read more</a>
-          </div>
-        </div>  
-
-        <div class="box">
-          <div class="image">
-            <img src="images/blog-2.jpeg" alt="" />
-          </div>
-
-          <div class="content">
-            <a href="#" class="title">Tasty And Refreshing</a>
-            <span>by admin / 24th, October 2021</span>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Similique, veniam! Aspernatur atque repellendus esse itaque. Ab
-              error perferendis omnis repudiandae qui amet culpa quis voluptatem
-              nesciunt...
-            </p>
-            <a href="#" id="btn">read more</a>
-          </div>
-        </div>  
-
-        <div class="box">
-          <div class="image">
-            <img src="images/blog-3.jpeg" alt="" />
-          </div>
-
-          <div class="content">
-            <a href="#" class="title">The Coffee Compass</a>
-            <span>by admin / 17th, february 2022</span>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Similique, veniam! Aspernatur atque repellendus esse itaque. Ab
-              error perferendis omnis repudiandae qui amet culpa quis voluptatem
-              nesciunt...
-            </p>
-            <a href="#" id="btn">read more</a>
-          </div>
-      </div>  
-    </section>
-
-    <section id="footer">
-      <div class="share">
-        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-      </div>
-
-      <div class="links">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#menu">Menu</a>
-        <a href="#products">Products</a>
-        <a href="#reviews">Reviews</a>
-        <a href="#contact">Contact</a>
-        <a href="#blogs">Blogs</a>
-      </div>
-
-      <div class="credits">created by <span>Wilhelminah Nduku</span> | all rights reserved </div>
-    </section>
-
     <script src="script.js"></script>
   </body>
 </html>
-
-
