--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <section id="header">
       <a href="#" class="logo"><img src="images/logo.png" alt="" /></a>
@@ -22,8 +23,8 @@
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
         <a href="#products">Products</a>
-        <a href="#review">Review</a>
-        <a href="#contact">Contact</a>
+        <a href="#reviews">Reviews</a>
+        <a href="#contact">Contact Us</a>
         <a href="#blogs">Blogs</a>
       </nav>
 
@@ -52,7 +53,7 @@
           <span><i id="delete" class="fa-solid fa-xmark"></i></span>
           <img src="images/cart-item-2.png" alt="" />
           <div class="content">
-            <h3>cart item 01</h3>
+            <h3>cart item 02</h3>
             <div class="price">$15.99</div>
           </div>
         </div>
@@ -61,7 +62,7 @@
           <span><i id="delete" class="fa-solid fa-xmark"></i></span>
           <img src="images/cart-item-3.png" alt="" />
           <div class="content">
-            <h3>cart item 01</h3>
+            <h3>cart item 03</h3>
             <div class="price">$15.99</div>
           </div>
         </div>
@@ -70,7 +71,7 @@
           <span><i id="delete" class="fa-solid fa-xmark"></i></span>
           <img src="images/cart-item-4.png" alt="" />
           <div class="content">
-            <h3>cart item 01</h3>
+            <h3>cart item 04</h3>
             <div class="price">$15.99</div>
           </div>
         </div>
@@ -79,20 +80,23 @@
       </div>
     </section>
 
+    <!-- Home -->
     <section id="home" class="section">
       <div class="content">
         <h3>Fresh Coffee in the Morning</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
-          a culpa maiores modi praesentium suscipit, pariatur, fuga provident
-          eveniet maxime.
+          Welcome to the world of exquisite flavors and aromatic journeys –
+          where every sip is a delightful escape into the realm of rich
+          indulgence. Cafena is a haven for connoisseurs and enthusiasts alike,
+          a place where the art of brewing meets the science of perfection.
         </p>
         <a href="#" id="btn">Get Yours Now</a>
       </div>
     </section>
 
+    <!-- About -->
     <section id="about" class="about">
-      <h1 class="heading"><span>about</span> us</h1>
+      <h1 class="heading">about<span> us</span></h1>
       <div class="row">
         <div class="image">
           <img src="images/about-img.jpeg" alt="" />
@@ -100,68 +104,72 @@
         <div class="content">
           <h3>what makes our coffee so special?</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Consectetur delectus iure exercitationem at nihil incidunt. Veniam
-            ipsum corrupti labore maxime quisquam voluptas similique esse
-            ratione officia! Quidem modi laborum commodi!
+            From the misty highlands of Ethiopia to the sun-kissed plantations
+            of Colombia, we traverse the globe to source beans that tell tales
+            of terroir and craftsmanship. Whether you're an adventurous explorer
+            seeking new flavor horizons or a dedicated connoisseur with a
+            discerning palate, you'll find a treasure trove of options that
+            cater to every preference.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-            consectetur doloribus in nemo dolorum illo ipsa ipsum nihil iure
-            placeat fuga.
+            Whether you're sipping a cup alone in quiet contemplation or sharing
+            laughter with friends over a French press, we're here to elevate
+            your coffee journey to new heights.
           </p>
           <a href="#" id="btn">learn more</a>
         </div>
       </div>
     </section>
 
+    <!-- Menu -->
     <section id="menu">
       <h1 class="heading">our<span> menu</span></h1>
       <div class="box-container">
         <div class="box">
           <img src="images/menu-1.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>Aromatic and Robust</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="images/menu-2.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>Invigorating and Complex</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="images/menu-3.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>tasty and Earthy</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="images/menu-4.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>Velvety and Soothing</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="images/menu-5.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>Bold and Balanced</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
 
         <div class="box">
           <img src="images/menu-6.png" alt="" />
-          <h3>tasty and healthy</h3>
+          <h3>Distinctive and Bittersweet</h3>
           <div class="price">$15.99 <span>$20.99</span></div>
           <a href="#" id="btn">add to cart</a>
         </div>
       </div>
     </section>
 
+    <!-- Products -->
     <section id="products">
       <h1 class="heading">our<span> products</span></h1>
       <div class="box-container">
@@ -263,16 +271,18 @@
       </div>
     </section>
 
-    <section id="review">
+    <!-- Reviews -->
+    <section id="reviews">
       <h1 class="heading">customers'<span> reviews</span></h1>
       <div class="box-container">
         <div class="box">
           <img class="quote" src="images/quote-img.png" alt="" />
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
-            ab laboriosam deleniti exercitationem voluptatum! Repellendus
-            numquam ab quo corrupti debitis, laudantium dicta amet libero
-            eveniet culpa quidem accusamus, assumenda at.
+            As a coffee aficionado, I'm always on the lookout for unique and
+            high-quality beans. Cafena didn't disappoint. The Columbia Organic I
+            ordered had the perfect balance of acidity and body. It's evident
+            that these beans were carefully sourced and expertly roasted. A
+            great addition to my daily routine!
           </p>
           <img class="user" src="images/pic-1.png" alt="" />
           <h3>Liam Mills</h3>
@@ -288,13 +298,14 @@
         <div class="box">
           <img class="quote" src="images/quote-img.png" alt="" />
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
-            ab laboriosam deleniti exercitationem voluptatum! Repellendus
-            numquam ab quo corrupti debitis, laudantium dicta amet libero
-            eveniet culpa quidem accusamus, assumenda at.
+            I'm not a regular coffee drinker, but your coffee has changed that
+            for me. The Peru Whole Bean blend I tried was surprisingly smooth
+            and approachable. It's gentle on my stomach, which is something I've
+            struggled with when it comes to coffee. I appreciate the attention
+            to detail in ensuring a comfortable experience for all.
           </p>
           <img class="user" src="images/pic-2.png" alt="" />
-          <h3>Liam Mills</h3>
+          <h3>Belle Zavala</h3>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -307,13 +318,13 @@
         <div class="box">
           <img class="quote" src="images/quote-img.png" alt="" />
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
-            ab laboriosam deleniti exercitationem voluptatum! Repellendus
-            numquam ab quo corrupti debitis, laudantium dicta amet libero
-            eveniet culpa quidem accusamus, assumenda at.
+            Wow, I never knew coffee could be this incredible! The Ethiopian mix
+            I got from Cafena is a symphony of flavors. It's like taking a
+            journey through the hills of Africa with every sip. The aroma alone
+            is enough to make my mornings brighter. Highly recommend.
           </p>
           <img class="user" src="images/pic-3.png" alt="" />
-          <h3>Liam Mills</h3>
+          <h3>Cade Smith</h3>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -324,6 +335,120 @@
         </div>
       </div>
     </section>
+
+    <!-- Contact -->
+    <section id="contact">
+      <h1 class="heading">contact<span> us</span></h1>
+      <div class="row">
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.818251830162!2d36.815766126953136!3d-1.282876999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d40faa9c15%3A0x2c783d195e7740fc!2sCaffe%20Dully%20Coffee%20Shop!5e0!3m2!1sen!2ske!4v1691522146553!5m2!1sen!2ske"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+
+        <form action="">
+          <h3>Get in touch</h3>
+          <div class="inputBox">
+            <span class="fas fa-user"></span>
+            <input type="text" placeholder="name" />
+          </div>
+
+          <div class="inputBox">
+            <span class="fas fa-envelope"></span>
+            <input type="email" placeholder="email" />
+          </div>
+
+          <div class="inputBox">
+            <span class="fas fa-phone"></span>
+            <input type="number" placeholder="number" />
+          </div>
+
+          <input type="submit" value="contact now" id="btn" />
+        </form>
+      </div>
+    </section>
+
+    <!-- Blogs -->
+    <section id="blogs">
+      <h1 class="heading">our<span> blogs</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="image">
+            <img src="images/blog-1.jpeg" alt="" />
+          </div>
+
+          <div class="content">
+            <a href="#" class="title">tasty and refreshing </a>
+            <span>by Mina / 15th february 2022 </span>
+            <p>
+              Grab your favorite mug, pour yourself a cup of your preferred
+              brew, and join us on this aromatic adventure.☕📖
+            </p>
+            <a href="#" id="btn">read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="images/blog-2.jpeg" alt="" />
+          </div>
+
+          <div class="content">
+            <a href="#" class="title">made from beans of a tree</a>
+            <span>by Mina / 21st may 2022 </span>
+            <p>
+              At Cafena, we're more than just enthusiasts; we're storytellers,
+              explorers, and advocates of the coffee culture. Join us as we
+              embark on a captivating expedition.
+            </p>
+            <a href="#" id="btn">read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="images/blog-3.jpeg" alt="" />
+          </div>
+
+          <div class="content">
+            <a href="#" class="title"> Sweaty with soapy notes</a>
+            <span>by Mina / 03rd september 2022 </span>
+            <p>
+              Delv into the depths of coffee's origins, brewing techniques, and
+              the vibrant tapestry of cultures it weaves together.
+            </p>
+            <a href="#" id="btn">read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <section id="footer">
+      <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+      </div>
+
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#products">Products</a>
+        <a href="#reviews">Reviews</a>
+        <a href="#contact">Contact Us</a>
+        <a href="#blogs">Blogs</a>
+      </div>
+
+      <div class="credit">
+        created by <span>Mina</span> | &#169; 2023, all rights reserved
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
