--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
       </div>
 
       <div class="credit">
-        created by <span>Mina</span> | &#169; 2023, all rights reserved
+        created by <span>Mina</span> | &#169; 2023, all rights reserved.
       </div>
     </section>
 
